# chardetng

./: .gitignore  Cargo.toml  README.md
src/: data.rs  lib.rs
