[package]
name = "chardetng"
description = "A character encoding detector for legacy Web content"
version = "0.1.17"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/chardetng/"
homepage = "https://docs.rs/chardetng/"
repository = "https://github.com/hsivonen/chardetng"
keywords = ["encoding", "web", "unicode", "charset"]
categories = ["text-processing", "encoding", "web-programming", "internationalization"]

[dependencies]
encoding_rs = { version = "0.8.29", default-features = false }
memchr = { version = "2.2.0", default-features = false }
cfg-if = "1.0"
rayon = { version = "1.3.0", optional = true }
arrayvec = { version = "0.5.1", optional = true }

[dev-dependencies]
detone = "1.0.0"

[features]
testing-only-no-semver-guarantees-do-not-use = []
multithreading = ["rayon", "arrayvec"]
